# sh-os

./: .gitignore  Makefile  README.md  i686-unknown-linux-gnu-rust.json  i686-unknown-linux-gnu.json  tuntap-down  tuntap-up
kernel/: Cargo.toml  i686-unknown-linux-gnu.json
kernel/asm/: Cargo.toml  ipl.asm  kernel.ld  secondboot.asm
kernel/asm/src/: lib.rs
kernel/boot/: asmfunc.asm  ipl.asm  kernel.ld  kernel2.ld  kernel3.ld  secondboot.asm
kernel/src/: lib.rs
kernel/src/allocator/: frame_allocator.rs  mod.rs  slab.rs
kernel/src/allocator/linked_list_allocator/: hole.rs  mod.rs
kernel/src/arch/: asmfunc.asm  asmfunc.rs  boot_info.rs  dsctbl.rs  graphic.rs  hankaku.rs  keyboard.rs  mod.rs  mouse.rs  paging.rs  pic.rs  timer.rs
kernel/src/driver/: mod.rs
kernel/src/driver/bus/: pci.rs
kernel/src/driver/net/: e1000.rs
kernel/src/execption/: mod.rs
kernel/src/mm/: mod.rs  slab.rs
kernel/src/spin/: mod.rs  mutex.rs  once.rs
kernel/src/sync/: queue.rs
kernel/src/util/: linked_list.rs  mod.rs
kernel/src/util/lazy_static/: core_lazy.rs  mod.rs
kernel/src/window/: mod.rs
