[package]
name = "shos"
version = "0.1.0"
authors = ["hagiwara"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 'z'
debug = true
lto = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[dependencies]

[package.metadata.cargo-xbuild]
memcpy = true
